--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.acme.tictactoe"
+        applicationId "com.acme.mvc_tictactoe"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
