--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--MVC pattern example-->
+        <activity android:name=".mvc.controller.TicTacToeActivity" android:screenOrientation="portrait">
+        </activity>
+
+        <!--MVP pattern example-->
         <activity android:name=".mvp.view.TicTacToeActivity" android:screenOrientation="portrait">
+        </activity>
+
+        <!--MVVM pattern example-->
+        <activity android:name=".mvvm.view.TicTacToeActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mvc.controller.TicTacToeActivity" android:screenOrientation="portrait">
-        </activity>
-    </application>
 
+    </application>
 </manifest>
