Added RetainedFragment to save Activity state data (eg. on rotation) and BaseActivity to contains commons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
         <!--MVVM pattern example-->
         <activity
             android:name=".mvpwithdatabinding.view.TicTacToeActivity"
-            android:label="@string/app_name_mvp_databinding"
-            android:screenOrientation="portrait">
+            android:label="@string/app_name_mvp_databinding">
+            <!--android:screenOrientation="portrait">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
